--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
     align-items: center;
 }
 
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
 body {
     background-color: #f0efec;
 }
