--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 body {
@@ -18,6 +20,8 @@ body {
 
 .card-background {
     background-color: white;
+    padding: 10px;
+    border-radius: 6px;
 }
 
 span {
