--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,10 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.instructions {
+    border-style: solid;
+    border-width: 4px;
+    border-color: white;
+    padding: 20px;
+}
