--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,11 @@
-.header {
-    display: grid;
-    grid-template-columns: 160px 160px;
-    justify-content: center;
-    align-items: center;
-}
-
-.cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    column-gap: 20px;
-    row-gap: 20px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    text-align: center;
-    font-weight: bold;
-}
-
 body {
     background-color: #f0efec;
     font-family: verdana;
     font-size: 15px;
 }
 
-.card-background {
-    background-color: white;
-    padding: 10px;
-    border-radius: 6px;
+h2 {
+    text-align: center;
 }
 
 span {
@@ -34,6 +14,21 @@ span {
 
 img {
     width: 100%;
+}
+
+.wrap {
+    width: 900px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 160px 160px;
+    justify-content: center;
+    align-items: center;
 }
 
 .mystery-card {
@@ -47,12 +42,28 @@ img {
     border-radius: 100%;
 }
 
-.wrap {
-    width: 900px;
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;
     margin-top: 40px;
     margin-bottom: 40px;
-    margin-left: auto;
-    margin-right: auto;
+    text-align: center;
+    font-weight: bold;
+}
+
+.card-background {
+    background-color: white;
+    padding: 10px;
+    border-radius: 6px;
+    box-shadow: 0px 0px 10px #00000080;
+    transition: 0.5s;
+}
+
+.card-background:hover {
+    cursor: pointer;
+    padding: 6px;
 }
 
 .instructions {
@@ -60,8 +71,4 @@ img {
     border-width: 4px;
     border-color: white;
     padding: 20px;
-}
-
-h2 {
-    text-align: center;
 }
