--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,10 @@ img {
     padding: 6px;
 }
 
+.eliminated {
+    opacity: 20%;
+}
+
 .instructions {
     border-style: solid;
     border-width: 4px;
